--- a/index.html
+++ b/index.html
@@ -4,34 +4,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="container">
+
+        <!-- Left -->
+
         <div class="left">
-            <div class="photo"></div>
-            <div class="info">
-                <p class="p-info1">Designer</p>
-                <p class="p-info2">London, UK</p>
-                <p class="p-info3">ex@mail.com</p>
-                <p class="p-info4">1224435534</p>
+            <div class="photo">
+                <p>Jana Doe</p>
+            </div>
+            <div class="info"><br>
+                <p class="p-info1"><i class="bi bi-backpack"></i> Designer</p>
+                <p class="p-info2"><i class="bi bi-house-door"></i> London, UK</p>
+                <p class="p-info3"><i class="bi bi-envelope"></i> ex@mail.com</p>
+                <p class="p-info4"><i class="bi bi-telephone"></i> 1224435534</p>
+                <br>
+                <hr class="info-hr">
+                <br>
+
+                <!-- Skills -->
+
+                <h2 class="skills"><i class="bi bi-asterisk"></i>Skills</h2>
+
+                <!-- Skills 1 -->
+
+                <p class="skills1">Adobe Photoshop</p>
+                <div class="adobe-loading">
+                    <div class="adobe-loading2">90%</div>
+                </div>
+
+                <!-- Skills 2 -->
+
+                <p class="skills2">Photography</p>
+                <div class="photography-loading">
+                    <div class="photography-loading2">80%</div>
+                </div>
+
+                <!-- Skills 3 -->
+
+                <p class="skills3">Illustrator</p>
+                <div class="illustrator-loading">
+                    <div class="illustrator-loading2">75%</div>
+                </div>
+
+                <!-- Skills 4 -->
+
+                <p class="skills4">Media</p>
+                <div class="media-loading">
+                    <div class="media-loading2">50%</div>
+                </div>
+                <br><br>
+
+                <!-- Languages -->
+
+                <h2 class="language"><i class="bi bi-translate"></i>Languages</h2>
+
+                <!-- Language 1 -->
+                <p class="language1">English</p>
+                <div class="english-loading">
+                    <div class="english-loading2"></div>
+                </div>
+
+                <!-- Language 2 -->
+                <p class="language2">Spanish</p>
+                <div class="spanish-loading">
+                    <div class="spanish-loading2"></div>
+                </div>
+
+                <!-- Language 3 -->
+                <p class="language3">German</p>
+                <div class="german-loading">
+                    <div class="german-loading2"></div>
+                </div>
             </div>
         </div>
+
+        <!-- Right -->
+
         <div class="right">
+
+            <!-- Experience -->
             <div class="experience">
-                <h1>Work Experience</h1><br>
+
+                <!-- Front End Developer -->
+
+                <h1 class="h1"><i class="bi bi-backpack"></i>Work Experience</h1><br>
                 <p class="p1">Front End Developer / w3schools.com</p><br>
-                <span class="span1">Jan 2015 -</span><button>Current</button>
+                <span class="span1"><i class="bi bi-calendar2-day"></i>Jan 2015 -</span><button>Current</button>
+                <br>
+                <p class="p1-2">Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur
+                    est reprehenderit sunt hic. Nulla <br>
+                    tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+                <br>
+                <hr class="fed-hr">
 
+                <!-- Web Developer  -->
+
+                <h2 class="h2">Web Developer / something.com</h2><br>
+                <span class="span2"><i class="bi bi-calendar2-day"></i>Mar 2012 - Dec 2014</span>
+                <br>
+                <p class="p2">Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla <br> 
+                    tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+                    <br>
+                    <hr class="wd-hr">
+
+                <!-- Graphic Designer -->
+
+                <h2 class="h2-2">Graphic Designer / designsomething.com</h2><br>
+                <span class="span3"><i class="bi bi-calendar2-day"></i>Jun 2010 - Mar 2012</span>
+                <br>
+                <p class="p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
+
+
+            <!-- Education -->
+
             <div class="education">
+                <h1 class="Ed-h1"><i class="bi bi-backpack"></i>Education</h1><br>
 
+                <!-- W3Schools.com -->
+
+                <p class="Ed-p1">W3Schools.com</p><br>
+                <span class="Ed-span1"><i class="bi bi-calendar2-day"></i>Forever</span>
+                <br>
+                <p class="Ed-p1-2">Web Development! All I need to know in one place</p>
+                <br>
+                <hr class="W3-hr">
+
+                <!-- London Business School-->
+
+                <h2 class="Ed-h2">London Business School</h2><br>
+                <span class="Ed-span2"><i class="bi bi-calendar2-day"></i>2013 - 2015</span>
+                <br>
+                <p class="Ed-p2">Master Degree</p>
+                    <br>
+                    <hr class="LBS-hr">
+
+                <!-- School of Coding -->
+
+                <h2 class="Ed-h2-2">School of Coding</h2><br>
+                <span class="Ed-span3"><i class="bi bi-calendar2-day"></i>2010 - 2013</span>
+                <br>
+                <p class="Ed-p3">Bachelor Degree</p>
             </div>
-
+            </div>
         </div>
-    </div>
+
+
+        <!-- Footer -->
+
+        <div class="footer">
+            <br>
+            <p class="footer-p">Find me on social media.</p><br>
+            <div class="footer-icons">
+            <i class="bi bi-facebook"></i> 
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-snapchat"></i>
+            <i class="bi bi-tiktok"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-youtube"></i>
+            </div>
+            <br>
+            <span class="footer-span">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"> w3.css</a>
+            </span>
+        </div>
+    
 </body>
 
 </html>
